<?xml version="1.0"?>
<package>
  <name>pp_env_model</name>
  <version>0.0.0</version>
  <description>Implements an environment model and behavioral planning based on lanelet2 and FSMs</description>
  <maintainer email="r2dempst@watonomous.ca">Rowan Dempster</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>derived_object_msgs</build_depend>
  <build_depend>lanelet2_core</build_depend>
  <build_depend>lanelet2_io</build_depend>
  <build_depend>lanelet2_projection</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pp_common</build_depend>
  <build_depend>hdmap_processing</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>path_planning_msgs</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>lanelet2_extension</build_depend>


  <run_depend>derived_object_msgs</run_depend>
  <run_depend>lanelet2_core</run_depend>
  <run_depend>lanelet2_io</run_depend>
  <run_depend>lanelet2_projection</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pp_common</run_depend>
  <run_depend>hdmap_processing</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>path_planning_msgs</run_depend>
  <run_depend>common_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>lanelet2_extension</run_depend>

</package>
